--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "publish-minor": "npx lerna changed && npx lerna publish minor --yes",
     "publish-premajor": "npx lerna changed && npx lerna publish premajor --yes",
     "publish-major": "npx lerna changed && npx lerna publish major --yes",
-    "publish-canary": "npx lerna publish prerelease --canary --yes --preid canary",
+    "publish-next": "npx lerna publish prerelease --canary --yes --dist-tag next --preid next",
     "lint": "npx npm-run-all --npm-path npm --parallel lint:*",
     "lint:eslint": "npx eslint ./ --cache --ext .js,.jsx,.ts,.tsx",
     "lint:prettier": "npx lerna run lint:prettier",
@@ -49,8 +49,8 @@
     "test:e2e": "npx playwright test"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.9",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.17.10",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
@@ -69,8 +69,8 @@
     "@storybook/addon-links": "^6.4.22",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "0.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "babel-plugin-optimize-clsx": "^2.6.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "cross-env": "^7.0.3",
@@ -112,7 +112,7 @@
     "spdx-correct": "^3.1.1",
     "spdx-satisfies": "^5.0.1",
     "ts-check": "0.2.4",
-    "typescript": "^4.6.3",
+    "typescript": "^4.6.4",
     "webpack": "^4.46.0",
     "yalc": "^1.0.0-pre.53",
     "yup": "^0.32.11"
