--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -27,7 +27,7 @@
     "build:babel:node": "BABEL_ENV=commonjs npx babel --root-mode upward bin -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:legacy": "BABEL_ENV=legacy npx babel --root-mode upward bin -d dist/legacy --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:modern": "BABEL_ENV=modern npx babel --root-mode upward bin -d dist/modern --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
-    "svg-optimize": "npx svgo --config=./svgo-config.yml -r -f assets assets",
+    "svg-optimize": "npx svgo@1.3.2 --config=./svgo-config.yml -r -f assets assets",
     "clean": "npx del-cli dist",
     "clean:all": "npx del-cli dist bin",
     "prepare": "npx npm-run-all --npm-path npm --serial clean:all svg-optimize --parallel build:convert build:copy",
@@ -44,21 +44,17 @@
     "react-dom": "^16.13.1 || ^17.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.9",
     "@hitachivantara/uikit-common-themes": "^3.4.0",
     "clsx": "^1.1.1",
-    "core-js": "^3.22.3",
-    "prop-types": "^15.8.1"
-  },
-  "devDependencies": {
-    "cpy-cli": "^4.1.0",
-    "del-cli": "^4.0.1",
     "htmltojsx": "^0.3.0",
     "jsdom-no-contextify": "^3.1.0",
-    "npm-run-all": "^4.1.5",
+    "prop-types": "^15.8.1",
     "recursive-readdir": "^2.2.2",
-    "svgo": "^1.3.2",
     "yargs": "^17.4.1"
+  },
+  "devDependencies": {
+    "@babel/runtime": "^7.17.9",
+    "core-js": "^3.22.4"
   },
   "files": [
     "dist"
