--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -31,7 +31,8 @@
     "del-cli": "^4.0.1",
     "json-to-scss": "file:lib/json-to-scss.tgz",
     "npm-run-all": "^4.1.5",
-    "watch": "^1.0.2"
+    "watch": "^1.0.2",
+    "yargs": "^17.4.1"
   },
   "files": [
     "dist"
