Enable branch name parameter for codedx report.

--- a/.github/workflows/security-checks.yml
+++ b/.github/workflows/security-checks.yml
@@ -17,6 +17,14 @@ jobs:
     runs-on: [self-hosted, Linux]
 
     steps:
+      - name: Discover current branch
+        run: |
+          REF=$( echo "${{ github.ref }}" ) # gets the branch or tag ref that triggered the workflow (something like 'refs/heads/branch-name')
+          REF=$( echo ${REF^^} ) # sets it to uppercase
+          REF=$( echo ${REF##*/} ) # removes the 'refs/heads/' reference
+          REF=$( echo ${REF//[_]/-} ) # replaces any '_' for a '-'
+          echo "CURRENT_BRANCH=$REF" >> $GITHUB_ENV
+          
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -65,7 +73,7 @@ jobs:
         with:
           file: dependency-check-report.xml
           serverUrl: ${{ secrets.CODEDX_SERVER_URL }}
-          projectId: ${{ env.CODEDX_SERVER_PROJECT_ID }}
+          projectId: ${{ env.CODEDX_SERVER_PROJECT_ID }};branch=${{ env.CURRENT_BRANCH }}
           key: ${{ secrets.CODEDX_TOKEN }}
 
   BlackDuckScan:
