--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -52,11 +52,17 @@
     "clsx": "^1.1.1",
     "core-js": "^3.22.5",
     "dayjs": "^1.11.2",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "rc-slider": "9.7.5",
     "rc-tooltip": "^3.7.3",
     "react-color": "^2.19.3",
+    "react-dnd": "14.0.3",
+    "react-dnd-accessible-backend": "^1.0.1",
+    "react-dnd-html5-backend": "14.0.1",
+    "react-dnd-multi-backend": "7.0.0-alpha.4",
+    "react-dnd-touch-backend": "14.0.0",
     "react-table": "^7.7.0"
   },
   "devDependencies": {
