--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "license-check": "npx lerna run license-check",
     "ts-check": "npx lerna run ts-check --parallel",
     "prepare": "npx husky install",
-    "test:e2e": "npx playwright test"
+    "test:e2e": "npx playwright test",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.6",
@@ -63,18 +65,22 @@
     "@hookform/resolvers": "^2.9.3",
     "@material-ui/core": "^4.12.4",
     "@playwright/test": "^1.23.1",
-    "@storybook/addon-docs": "^6.5.9",
+    "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-webpack4": "^6.5.9",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
-    "@storybook/testing-library": "0.0.13",
+    "@storybook/testing-library": "^0.0.13",
     "@typescript-eslint/eslint-plugin": "^5.30.4",
     "@typescript-eslint/parser": "^5.30.4",
+    "babel-loader": "^8.2.5",
     "babel-plugin-optimize-clsx": "^2.6.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "cross-env": "^7.0.3",
     "del-cli": "^4.0.1",
+    "dotenv-webpack": "^7.1.1",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -93,6 +99,7 @@
     "fs-extra": "^10.1.0",
     "fs-readdir-recursive": "^1.1.0",
     "html-react-parser": "^2.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "lerna": "^5.1.6",
     "license-checker": "^25.0.1",
@@ -113,7 +120,6 @@
     "spdx-satisfies": "^5.0.1",
     "ts-check": "0.2.4",
     "typescript": "^4.7.4",
-    "webpack": "^4.46.0",
     "yalc": "^1.0.0-pre.53",
     "yup": "^0.32.11"
   }
