--- a/package.json
+++ b/package.json
@@ -120,7 +120,11 @@
     "spdx-satisfies": "^5.0.1",
     "ts-check": "0.2.4",
     "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
     "yalc": "^1.0.0-pre.53",
     "yup": "^0.32.11"
+  },
+  "resolutions": {
+    "webpack": "5"
   }
 }
