--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@hitachivantara/uikit-react-core",
-  "version": "3.67.17",
-  "description": "A collection of React components for the Hitachi Vantara's Design System.",
+  "name": "@hitachivantara/uikit-react-viz",
+  "version": "3.1.1",
+  "description": "A collection of React visualizations for the Hitachi Vantara's Design System.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "license": "Apache-2.0",
   "sideEffects": false,
@@ -41,37 +41,20 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
+    "plotly.js-basic-dist": "^2.11.1",
     "react": "^16.13.1 || ^17.0.0",
     "react-dom": "^16.13.1 || ^17.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
-    "@hitachivantara/uikit-common-themes": "^3.5.0",
+    "@hitachivantara/uikit-react-core": "^3.67.17",
     "@hitachivantara/uikit-react-icons": "^3.8.13",
-    "@popperjs/core": "2.11.5",
-    "attr-accept": "^2.2.2",
     "clsx": "^1.1.1",
-    "core-js": "^3.22.5",
-    "dayjs": "^1.11.2",
+    "core-js": "^3.22.4",
     "deep-diff": "^1.0.2",
-    "detect-browser": "^5.3.0",
-    "focus-visible": "^5.2.0",
-    "focus-within-polyfill": "5.2.1",
-    "hoist-non-react-statics": "^3.3.2",
     "lodash": "^4.17.21",
-    "notistack": "^1.0.10",
-    "popper-max-size-modifier": "^0.2.0",
     "prop-types": "^15.8.1",
-    "rc-slider": "10.0.0",
-    "rc-tooltip": "^5.1.1",
-    "react-debounce-render": "^7.0.0",
-    "react-outside-click-handler": "^1.3.0",
-    "react-popper": "^2.3.0",
-    "react-resize-detector": "^6.7.8",
-    "react-table": "6.8.6",
-    "react-table-hoc-fixed-columns": "2.1.1",
-    "react-virtualized-auto-sizer": "^1.0.6",
-    "react-window": "^1.8.7"
+    "react-plotly.js": "^2.5.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -79,9 +62,8 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^12.8.3",
     "@types/lodash": "^4.14.182",
-    "@types/react-window": "^1.8.5",
+    "@types/plotly.js": "^1.54.20",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
-    "cross-env": "^7.0.3",
     "del-cli": "^4.0.1",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
@@ -90,8 +72,7 @@
     "jest-fail-on-console": "^2.4.1",
     "jest-junit": "^13.2.0",
     "nodemon": "^2.0.16",
-    "npm-run-all": "^4.1.5",
-    "react-google-charts": "^3.0.15"
+    "npm-run-all": "^4.1.5"
   },
   "files": [
     "dist"
