--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,14 +4,16 @@
   "description": "A collection of React components for the Hitachi Vantara's Design System.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "license": "Apache-2.0",
-  "sideEffects": false,
-  "exports": {
-    ".": "./dist/modern/index.js",
-    "./dist/": "./dist/modern/"
-  },
   "main": "./dist/index.js",
   "module": "./dist/legacy/index.js",
-  "typings": "dist/index.d.ts",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/modern/index.js"
+    }
+  },
+  "sideEffects": false,
   "author": {
     "name": "Hitachi Vantara UI Kit Team"
   },
@@ -41,18 +43,18 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
-    "react": "^16.13.1 || ^17.0.0",
-    "react-dom": "^16.13.1 || ^17.0.0"
+    "react": "^16.13.1 || ^17.0.2",
+    "react-dom": "^16.13.1 || ^17.0.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.9",
+    "@babel/runtime": "^7.18.6",
     "@hitachivantara/uikit-common-themes": "^3.5.0",
     "@hitachivantara/uikit-react-icons": "^3.8.13",
     "@popperjs/core": "2.11.5",
     "attr-accept": "^2.2.2",
-    "clsx": "^1.1.1",
-    "core-js": "^3.22.5",
-    "dayjs": "^1.11.2",
+    "clsx": "^1.2.0",
+    "core-js": "^3.23.3",
+    "dayjs": "^1.11.3",
     "deep-diff": "^1.0.2",
     "detect-browser": "^5.3.0",
     "focus-visible": "^5.2.0",
@@ -64,10 +66,10 @@
     "prop-types": "^15.8.1",
     "rc-slider": "10.0.0",
     "rc-tooltip": "^5.1.1",
-    "react-debounce-render": "^7.0.0",
+    "react-debounce-render": "^8.0.2",
     "react-outside-click-handler": "^1.3.0",
     "react-popper": "^2.3.0",
-    "react-resize-detector": "^6.7.8",
+    "react-resize-detector": "^7.1.2",
     "react-table": "6.8.6",
     "react-table-hoc-fixed-columns": "2.1.1",
     "react-virtualized-auto-sizer": "^1.0.6",
@@ -75,8 +77,8 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^12.8.3",
     "@types/lodash": "^4.14.182",
     "@types/react-window": "^1.8.5",
@@ -85,20 +87,18 @@
     "del-cli": "^4.0.1",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
-    "jest": "^27.3.1",
+    "jest": "^28.1.2",
     "jest-canvas-mock": "^2.4.0",
-    "jest-fail-on-console": "^2.4.1",
-    "jest-junit": "^13.2.0",
-    "nodemon": "^2.0.16",
+    "jest-environment-jsdom": "^28.1.2",
+    "jest-fail-on-console": "^2.4.2",
+    "jest-junit": "^14.0.0",
+    "nodemon": "^2.0.18",
     "npm-run-all": "^4.1.5",
-    "react-google-charts": "^3.0.15"
+    "react-google-charts": "^4.0.0"
   },
   "files": [
     "dist"
   ],
-  "jest": {
-    "testEnvironment": "node"
-  },
   "publishConfig": {
     "access": "public"
   }
