--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -4,17 +4,19 @@
   "description": "A collection of icons for use with Hitachi Vantara's React Components.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "license": "Apache-2.0",
+  "main": "./dist/index.js",
+  "module": "./dist/legacy/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/modern/index.js"
+    }
+  },
+  "sideEffects": false,
   "author": {
     "name": "Hitachi Vantara UI Kit Team"
   },
-  "sideEffects": false,
-  "exports": {
-    ".": "./dist/modern/index.js",
-    "./dist/": "./dist/modern/"
-  },
-  "main": "./dist/index.js",
-  "module": "./dist/legacy/index.js",
-  "typings": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/lumada-design/hv-uikit-react.git"
@@ -40,25 +42,25 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
-    "react": "^16.13.1 || ^17.0.0",
-    "react-dom": "^16.13.1 || ^17.0.0"
+    "react": "^16.13.1 || ^17.0.2",
+    "react-dom": "^16.13.1 || ^17.0.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.9",
+    "@babel/runtime": "^7.18.6",
     "@hitachivantara/uikit-common-themes": "^3.5.0",
-    "clsx": "^1.1.1",
-    "core-js": "^3.22.5",
+    "clsx": "^1.2.0",
+    "core-js": "^3.23.3",
     "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "cpy-cli": "^4.1.0",
     "del-cli": "^4.0.1",
-    "htmltojsx": "^0.3.0",
+    "htmltojsx": "^0.2.5",
     "jsdom-no-contextify": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "recursive-readdir": "^2.2.2",
     "svgo": "^1.3.2",
-    "yargs": "^17.4.1"
+    "yargs": "^17.5.1"
   },
   "files": [
     "dist"
