--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -4,17 +4,19 @@
   "description": "A collection of contributed React components for the Hitachi Vantara's Design System.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "license": "Apache-2.0",
+  "main": "./dist/index.js",
+  "module": "./dist/legacy/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/modern/index.js"
+    }
+  },
+  "sideEffects": false,
   "author": {
     "name": "Hitachi Vantara UI Kit Team"
   },
-  "sideEffects": false,
-  "exports": {
-    ".": "./dist/modern/index.js",
-    "./dist/": "./dist/modern/"
-  },
-  "main": "./dist/index.js",
-  "module": "./dist/legacy/index.js",
-  "typings": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/lumada-design/hv-uikit-react.git"
@@ -41,44 +43,42 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
-    "react": "^16.13.1 || ^17.0.0",
-    "react-dom": "^16.13.1 || ^17.0.0"
+    "react": "^16.13.1 || ^17.0.2",
+    "react-dom": "^16.13.1 || ^17.0.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.9",
+    "@babel/runtime": "^7.18.6",
     "@hitachivantara/uikit-react-core": "^3.67.17",
     "@hitachivantara/uikit-react-icons": "^3.8.13",
-    "@types/react-table": "^7.7.11",
-    "clsx": "^1.1.1",
-    "core-js": "^3.22.5",
-    "dayjs": "^1.11.2",
+    "@types/react-table": "^7.7.12",
+    "clsx": "^1.2.0",
+    "core-js": "^3.23.3",
+    "dayjs": "^1.11.3",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "rc-slider": "9.7.5",
     "rc-tooltip": "^3.7.3",
     "react-color": "^2.19.3",
-    "react-table": "^7.7.0"
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.2",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^12.8.3",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "del-cli": "^4.0.1",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
-    "jest": "^27.3.1",
-    "jest-fail-on-console": "^2.4.1",
-    "jest-junit": "^13.2.0",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
+    "jest-fail-on-console": "^2.4.2",
+    "jest-junit": "^14.0.0",
     "npm-run-all": "^4.1.5"
   },
   "files": [
     "dist"
   ],
-  "jest": {
-    "testEnvironment": "node"
-  },
   "publishConfig": {
     "access": "public"
   }
