--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -1,17 +1,19 @@
 {
   "name": "@hitachivantara/uikit-react-viz",
-  "version": "3.1.1",
+  "version": "3.0.0",
   "description": "A collection of React visualizations for the Hitachi Vantara's Design System.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "license": "Apache-2.0",
-  "sideEffects": false,
-  "exports": {
-    ".": "./dist/modern/index.js",
-    "./dist/": "./dist/modern/"
-  },
   "main": "./dist/index.js",
   "module": "./dist/legacy/index.js",
-  "typings": "dist/index.d.ts",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/modern/index.js"
+    }
+  },
+  "sideEffects": false,
   "author": {
     "name": "Hitachi Vantara UI Kit Team"
   },
@@ -42,15 +44,15 @@
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
     "plotly.js-basic-dist": "^2.11.1",
-    "react": "^16.13.1 || ^17.0.0",
-    "react-dom": "^16.13.1 || ^17.0.0"
+    "react": "^16.13.1 || ^17.0.2",
+    "react-dom": "^16.13.1 || ^17.0.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.9",
+    "@babel/runtime": "^7.18.6",
     "@hitachivantara/uikit-react-core": "^3.67.17",
     "@hitachivantara/uikit-react-icons": "^3.8.13",
-    "clsx": "^1.1.1",
-    "core-js": "^3.22.4",
+    "clsx": "^1.2.0",
+    "core-js": "^3.23.3",
     "deep-diff": "^1.0.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
@@ -58,28 +60,26 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^12.8.3",
     "@types/lodash": "^4.14.182",
-    "@types/plotly.js": "^1.54.20",
+    "@types/plotly.js": "^1.54.22",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "del-cli": "^4.0.1",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
-    "jest": "^27.3.1",
+    "jest": "^28.1.2",
     "jest-canvas-mock": "^2.4.0",
-    "jest-fail-on-console": "^2.4.1",
-    "jest-junit": "^13.2.0",
-    "nodemon": "^2.0.16",
+    "jest-environment-jsdom": "^28.1.2",
+    "jest-fail-on-console": "^2.4.2",
+    "jest-junit": "^14.0.0",
+    "nodemon": "^2.0.18",
     "npm-run-all": "^4.1.5"
   },
   "files": [
     "dist"
   ],
-  "jest": {
-    "testEnvironment": "node"
-  },
   "publishConfig": {
     "access": "public"
   }
