--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -4,6 +4,15 @@
   "description": "A collection of themes for use with Hitachi Vantara Components.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "license": "Apache-2.0",
+  "main": "./dist/index.js",
+  "module": "./dist/legacy/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/modern/index.js"
+    }
+  },
   "sideEffects": false,
   "author": {
     "name": "Hitachi Vantara UI Kit Team"
@@ -11,9 +20,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/lumada-design/hv-uikit-react.git"
-  },
-  "bugs": {
-    "url": "https://github.com/lumada-design/hv-uikit-react/issues"
   },
   "scripts": {
     "dev": "npx npm-run-all --npm-path npm clean -p dev:*",
