--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,7 +41,6 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
-    "plotly.js-basic-dist": "^1.55.2 || ^2.11.1",
     "react": "^16.13.1 || ^17.0.0",
     "react-dom": "^16.13.1 || ^17.0.0"
   },
@@ -50,7 +49,6 @@
     "@hitachivantara/uikit-common-themes": "^3.5.0",
     "@hitachivantara/uikit-react-icons": "^3.8.13",
     "@popperjs/core": "2.11.5",
-    "@types/plotly.js": "^1.54.20",
     "attr-accept": "^2.2.2",
     "clsx": "^1.1.1",
     "core-js": "^3.22.5",
@@ -88,10 +86,11 @@
     "del-cli": "^4.0.1",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
-    "jest": "^27.3.1",
+    "jest": "^28.1.2",
     "jest-canvas-mock": "^2.4.0",
-    "jest-fail-on-console": "^2.4.1",
-    "jest-junit": "^13.2.0",
+    "jest-environment-jsdom": "^28.1.2",
+    "jest-fail-on-console": "^2.4.2",
+    "jest-junit": "^14.0.0",
     "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
     "react-google-charts": "^3.0.15"
@@ -99,9 +98,6 @@
   "files": [
     "dist"
   ],
-  "jest": {
-    "testEnvironment": "node"
-  },
   "publishConfig": {
     "access": "public"
   }
