--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "dev": "npx lerna run dev --parallel",
     "build": "npx lerna run build",
     "build-documentation": "npx npm-run-all --npm-path npm --serial clean:docs build-documentation:storybook",
-    "build-documentation:storybook": "cross-env NODE_OPTIONS=--max_old_space_size=8192 build-storybook --docs -o dist --quiet",
-    "doc": "cross-env NODE_OPTIONS=--max_old_space_size=8192 start-storybook -p 9001 --ci --quiet --no-version-updates",
+    "build-documentation:storybook": "npx cross-env NODE_OPTIONS=--max_old_space_size=8192 build-storybook --docs -o dist --quiet",
+    "doc": "npx cross-env NODE_OPTIONS=--max_old_space_size=8192 start-storybook -p 9001 --ci --quiet --no-version-updates",
     "test": "npx lerna run test --parallel",
     "test:update": "npx lerna run test:update --parallel",
     "link": "npx lerna run link --parallel",
@@ -38,6 +38,7 @@
     "publish-minor": "npx lerna changed && npx lerna publish minor --yes",
     "publish-premajor": "npx lerna changed && npx lerna publish premajor --yes",
     "publish-major": "npx lerna changed && npx lerna publish major --yes",
+    "publish-next": "npx lerna publish prerelease --canary --exact --yes --dist-tag next --preid next",
     "lint": "npx npm-run-all --npm-path npm --parallel lint:*",
     "lint:eslint": "npx eslint ./ --cache --ext .js,.jsx,.ts,.tsx",
     "lint:prettier": "npx lerna run lint:prettier",
@@ -45,75 +46,84 @@
     "license-check": "npx lerna run license-check",
     "ts-check": "npx lerna run ts-check --parallel",
     "prepare": "npx husky install",
-    "test:e2e": "npx playwright test"
+    "test:e2e": "npx playwright test",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.17.10",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
-    "@babel/plugin-transform-object-assign": "^7.16.7",
-    "@babel/plugin-transform-react-constant-elements": "^7.17.6",
-    "@babel/plugin-transform-runtime": "^7.17.10",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@commitlint/cli": "^16.2.4",
-    "@commitlint/config-conventional": "^16.2.4",
-    "@hookform/resolvers": "^2.8.8",
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.6",
+    "@babel/plugin-transform-object-assign": "^7.18.6",
+    "@babel/plugin-transform-react-constant-elements": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@hookform/resolvers": "^2.9.3",
     "@material-ui/core": "^4.12.4",
-    "@playwright/test": "^1.21.1",
-    "@storybook/addon-docs": "^6.4.22",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-links": "^6.4.22",
-    "@storybook/react": "^6.4.22",
-    "@storybook/testing-library": "0.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
+    "@playwright/test": "^1.23.1",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.30.4",
+    "@typescript-eslint/parser": "^5.30.4",
+    "babel-loader": "^8.2.5",
     "babel-plugin-optimize-clsx": "^2.6.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "cross-env": "^7.0.3",
-    "del-cli": "^4.0.1",
-    "eslint": "^8.15.0",
+    "dotenv-webpack": "^7.1.1",
+    "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-import-resolver-typescript": "^3.2.1",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest-dom": "^3.9.2",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-storybook": "^0.5.11",
-    "eslint-plugin-testing-library": "^5.4.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.5.13",
+    "eslint-plugin-testing-library": "^5.5.1",
     "find-root": "^1.1.0",
     "formik": "^2.2.9",
     "fs-extra": "^10.1.0",
     "fs-readdir-recursive": "^1.1.0",
-    "html-react-parser": "^1.4.12",
-    "husky": "^7.0.4",
-    "lerna": "^4.0.0",
+    "html-react-parser": "^2.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.1",
+    "lerna": "^5.1.6",
     "license-checker": "^25.0.1",
-    "monaco-editor": "^0.31.1",
+    "monaco-editor": "^0.33.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "npm-run-all": "^4.1.5",
-    "plotly.js-basic-dist": "^2.11.1",
-    "prettier": "^2.6.2",
+    "plotly.js-basic-dist": "^2.12.1",
+    "prettier": "^2.7.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
-    "react-docgen": "^5.4.0",
+    "react-docgen": "^5.4.3",
     "react-dom": "^17.0.2",
-    "react-google-charts": "^3.0.15",
-    "react-hook-form": "^7.30.0",
-    "react-monaco-editor": "^0.47.0",
+    "react-google-charts": "^4.0.0",
+    "react-hook-form": "^7.33.1",
+    "react-monaco-editor": "^0.49.0",
     "react-resize-aware": "^3.1.1",
     "spdx-correct": "^3.1.1",
     "spdx-satisfies": "^5.0.1",
     "ts-check": "0.2.4",
-    "typescript": "^4.6.4",
-    "webpack": "^4.46.0",
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
     "yalc": "^1.0.0-pre.53",
     "yup": "^0.32.11"
+  },
+  "resolutions": {
+    "webpack": "5"
   }
 }
