--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -36,25 +36,25 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
-    "react": "^16.13.1 || ^17.0.0",
-    "react-dom": "^16.13.1 || ^17.0.0"
+    "react": "^16.13.1 || ^17.0.2",
+    "react-dom": "^16.13.1 || ^17.0.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.9",
     "@hitachivantara/uikit-common-themes": "^3.5.0",
     "clsx": "^1.1.1",
-    "core-js": "^3.22.5",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "recursive-readdir": "^2.2.2",
+    "yargs": "^17.4.1"
   },
   "devDependencies": {
+    "@babel/runtime": "^7.17.9",
+    "core-js": "^3.22.4",
     "cpy-cli": "^4.1.0",
     "del-cli": "^4.0.1",
     "htmltojsx": "^0.3.0",
     "jsdom-no-contextify": "^3.1.0",
     "npm-run-all": "^4.1.5",
-    "recursive-readdir": "^2.2.2",
-    "svgo": "^1.3.2",
-    "yargs": "^17.4.1"
+    "svgo": "^1.3.2"
   },
   "files": [
     "dist"
