--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@hitachivantara/uikit-react-lab",
-  "version": "3.48.1",
-  "description": "A collection of contributed React components for the Hitachi Vantara's Design System.",
+  "name": "@hitachivantara/uikit-react-viz",
+  "version": "3.0.0",
+  "description": "A collection of React visualizations for the Hitachi Vantara's Design System.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "license": "Apache-2.0",
   "main": "./dist/index.js",
@@ -23,10 +23,10 @@
     "build:babel:modern": "BABEL_ENV=modern npx babel --root-mode upward src -d dist/modern --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:post:clean-snapshots": "npx del-cli **/dist/**/tests",
     "dev": "npx npm-run-all --npm-path npm clean dev:babel:watch",
-    "dev:babel:watch": "npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored --watch",
+    "dev:babel:watch": "BABEL_ENV=commonjs npx babel --root-mode upward src -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored --watch",
     "clean": "npx del-cli dist",
     "test": "jest -c config/jest-config.js --coverage",
-    "test:watch": "jest -c config/jest-config.js --watch",
+    "test:watch": "jest -c ./config/jest-config.js --watch",
     "test:update": "jest -c ./config/jest-config.js --u",
     "prepublishOnly": "npm run build",
     "link": "npm link",
@@ -37,37 +37,37 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
+    "plotly.js-basic-dist": "^2.11.1",
     "react": "^16.13.1 || ^17.0.2",
     "react-dom": "^16.13.1 || ^17.0.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.18.6",
     "@hitachivantara/uikit-react-core": "^3.67.18",
-    "@hitachivantara/uikit-react-icons": "^3.8.13",
-    "@types/react-table": "^7.7.12",
     "clsx": "^1.2.0",
     "core-js": "^3.23.3",
-    "dayjs": "^1.11.3",
+    "deep-diff": "^1.0.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
-    "rc-slider": "9.7.5",
-    "rc-tooltip": "^3.7.3",
-    "react-color": "^2.19.3",
-    "react-table": "^7.8.0"
+    "react-plotly.js": "^2.5.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^12.8.3",
+    "@types/lodash": "^4.14.182",
+    "@types/plotly.js": "^1.54.22",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "del-cli": "^4.0.1",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "jest": "^28.1.2",
+    "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^28.1.2",
     "jest-fail-on-console": "^2.4.2",
     "jest-junit": "^14.0.0",
+    "nodemon": "^2.0.18",
     "npm-run-all": "^4.1.5"
   },
   "files": [
