--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -20,9 +20,9 @@
     "build:convert": "node ./src/svgToReact.js dir --input assets/ --output bin --force",
     "build:copy": "npx cpy-cli 'src/IconBase.*' bin/",
     "build:babel": "npx npm-run-all --npm-path npm --parallel build:babel:*",
-    "build:babel:node": "BABEL_ENV=commonjs npx babel --root-mode upward bin -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
-    "build:babel:legacy": "BABEL_ENV=legacy npx babel --root-mode upward bin -d dist/legacy --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
-    "build:babel:modern": "BABEL_ENV=modern npx babel --root-mode upward bin -d dist/modern --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
+    "build:babel:node": "cross-env BABEL_ENV=commonjs npx babel --root-mode upward bin -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
+    "build:babel:legacy": "cross-env BABEL_ENV=legacy npx babel --root-mode upward bin -d dist/legacy --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
+    "build:babel:modern": "cross-env BABEL_ENV=modern npx babel --root-mode upward bin -d dist/modern --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "svg-optimize": "npx svgo --config=./svgo-config.yml -r -f assets assets",
     "clean": "npx del-cli dist",
     "clean:all": "npx del-cli dist bin",
